; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_src_compare.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_src_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_src_node = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pf_src_node*, %struct.pf_src_node*)* @pf_src_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_src_compare(%struct.pf_src_node* %0, %struct.pf_src_node* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pf_src_node*, align 8
  %5 = alloca %struct.pf_src_node*, align 8
  %6 = alloca i32, align 4
  store %struct.pf_src_node* %0, %struct.pf_src_node** %4, align 8
  store %struct.pf_src_node* %1, %struct.pf_src_node** %5, align 8
  %7 = load %struct.pf_src_node*, %struct.pf_src_node** %4, align 8
  %8 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.pf_src_node*, %struct.pf_src_node** %5, align 8
  %12 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %11, i32 0, i32 2
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp sgt i64 %10, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %52

17:                                               ; preds = %2
  %18 = load %struct.pf_src_node*, %struct.pf_src_node** %4, align 8
  %19 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.pf_src_node*, %struct.pf_src_node** %5, align 8
  %23 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %22, i32 0, i32 2
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp slt i64 %21, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %17
  store i32 -1, i32* %3, align 4
  br label %52

28:                                               ; preds = %17
  %29 = load %struct.pf_src_node*, %struct.pf_src_node** %4, align 8
  %30 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.pf_src_node*, %struct.pf_src_node** %5, align 8
  %33 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = sub nsw i32 %31, %34
  store i32 %35, i32* %6, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %28
  %38 = load i32, i32* %6, align 4
  store i32 %38, i32* %3, align 4
  br label %52

39:                                               ; preds = %28
  %40 = load %struct.pf_src_node*, %struct.pf_src_node** %4, align 8
  %41 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %40, i32 0, i32 1
  %42 = load %struct.pf_src_node*, %struct.pf_src_node** %5, align 8
  %43 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %42, i32 0, i32 1
  %44 = load %struct.pf_src_node*, %struct.pf_src_node** %4, align 8
  %45 = getelementptr inbounds %struct.pf_src_node, %struct.pf_src_node* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @pf_addr_compare(i32* %41, i32* %43, i32 %46)
  store i32 %47, i32* %6, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %39
  %50 = load i32, i32* %6, align 4
  store i32 %50, i32* %3, align 4
  br label %52

51:                                               ; preds = %39
  store i32 0, i32* %3, align 4
  br label %52

52:                                               ; preds = %51, %49, %37, %27, %16
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @pf_addr_compare(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
